--- a/Maude.tex
+++ b/Maude.tex
@@ -592,7 +592,7 @@ At the end of the interval $t_2$ a new movement authority $EoA'$ has been grante
 
 Braking $\to$ Acc:  The time interval $\delta$ can be partitioned into 2 separate intervals $t_1$ and $t_2$ corresponding to the two control modes. The argument for the first control mode is same as that as the argument for the first Braking case.  At the end of the interval $t_1$ a new movement authority is received which greatly increases the braking distance far beyond what the train can travel in this possible time interval.
 
-Braking $\to$ Acc $\to$ FAS: The time interval can be partitioned into 3 separate intervals $t_1,t_2$ and $t_3$.
+Braking $\to$ Acc $\to$ FAS: The time interval can be partitioned into 3 separate intervals $t_1,t_2$ and $t_3$. The invariant holds in the first two time intervals following the arguement from the previous case Breaking $\to$ Acc. At the end of the Acc mode there is a transition to FAS however since there is not enough time to cross in such a short 
 
 
 
