--- a/lit.bib
+++ b/lit.bib
@@ -540,6 +540,18 @@
   number = {2}
 }
 
+@INPROCEEDINGS{NH00,
+  author = {Harman, N.A.},
+  title = {Verifying a Simple Pipelined Microprocessor Using Maude},
+  booktitle = {Recent Trends in Algebraic Development Techniques},
+  year = {2002},
+  editor = {Cerioli, Maura and Reggio, Gianna},
+  volume = {2267},
+  series = {Lecture Notes in Computer Science},
+  pages = {128--151},
+  publisher = {Springer Berlin Heidelberg}
+}
+
 @BOOK{JH09,
   title = {Handbook of {P}ractical {L}ogic and {A}utomated {R}easoning.},
   publisher = {Cambridge University Press},
@@ -1156,3 +1168,21 @@
   note = {Scade, http://www.esterel-technologies.com}
 }
 
+@INPROCEEDINGS{,
+  owner = {andylawrence},
+  timestamp = {2014.03.01}
+}
+
+@InProceedings{DI13,
+  author = {Ishii, D. and Melquiond, G. and Nakajima, S.},
+  title = {Inductive Verification of Hybrid Automata with Strongest Postcondition
+	Calculus},
+  booktitle = {Proceedings of the 10th International Conference on Integrated Formal Methods},
+  series = {{L}ecture {N}otes in {C}omputer {S}cience},
+  colume = {7940},
+  year = {2013},
+  pages = {139--153},
+  publisher = {Springer Berlin Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.03.01}
+}
