--- a/Background.tex
+++ b/Background.tex
@@ -1,4 +1,8 @@
 \thesischapter{Background: Traditional Railway Control Systems:}
+The birth of the railways occurred in the 1800s and from that point until the present day they have experienced continual growth, change and development. In the beginning the burden of safety was placed solely on human shoulders and has since been placed on mechanical systems before finally being transferred to electronics systems that are in place guaranteeing safety today. In the following we shall present a brief history of the railway followed by information on our industrial partner Invensys Rail.  Following this general introduction we shall look into specific equipment found on the modern railway and other information needed to understand the domain. Most importantly we shall describe the Westrace interlocking, a modern system charge with guaranteeing safety on the railway, which is produced by Invensys. In the final part of this chapter we shall look at some previous work in this field.
+
+
+\begin{comment}
 From their birth in the 1800s to the present day, the railway and its control
 systems have seen many advances. Its control and safety has gone from being a
 completely manual human based system, to a mechanical system and finally to the electronic
@@ -9,7 +13,7 @@ them. We also study
 Westrace interlocking which is produced by Invensys and the
 ladder logic programs which run on it. Finally, we look at some previous work
 in this field.
-
+\end{comment}
 
 \section{ A History of Railway Signalling and Control Systems}
 Prior to the days of fixed signals, Policemen would be stationed at
