--- a/Background.tex
+++ b/Background.tex
@@ -16,6 +16,10 @@ in this field.
 \end{comment}
 
 \section{ A History of Railway Signalling and Control Systems}
+Initially in the early days of the railway there was not fixed signals as we see today. Instead Policemen stationed at junctions and railway stations, were charged with signalling train drivers using a system of flags or oil lamps and changing the points of the railway. A major problem of the time, without telecommunications, was that there was no way of locating a train once it went out of sight. This meant that in practice the only safety precaution that could be taken was to delay the departure of trains using an egg timer which would hopefully space out their positions along the track. The level of safety resulting from this precaution was acceptable as train speeds were not relatively high at the time.
+
+
+\begin{comment}
 Prior to the days of fixed signals, Policemen would be stationed at
 junctions and railway stations. They changed points manually and gave instructions to train drivers
 by using a system of either flags or oil lamps depending on the
@@ -25,7 +29,12 @@ station and went out of sight. The only safety precaution that could be taken
 was to use an egg timer to delay the departure of the next train in order to
 give the previous train time to progress along the track. Train speeds were
 not very high during this period so this was an acceptable way of ensuring safety.
+\end{comment}
 
+
+The most important type of signal found in the modern railway is the \textbf{fixed signal} which are static, positioned by the side of the track and visually present information to the train driver. The first fixed signals were wooden boards shaped in such a way to provide specific information attached to poles which rotate around a vertical axis. Typically these boards would form a signal instructing the train driver to stop, however if the board was rotated side-on to the driver then it becomes inactive and the driver would proceed if it is safe to do so.
+
+\begin{comment}
 Modern railway signally makes use of \textbf{fixed signals}. These are permanently positioned
 by the side of the track and provide some visual information to the train driver.
 The original fixed signal consisted of a shaped wooden board that could be
@@ -33,6 +42,8 @@ rotated on pole round a vertical axis. If the board was visible to the driver
 then he would have to stop the train. On the other hand if the driver couldn't
 see the board because it was side-on to him then he would be able to
 proceed.
+\end{comment}
+
 
 One of the major developments in railway signalling was the introduction of
 the \textbf{Semaphore} fixed signal. These consisted of a board that could be
