--- a/Background.tex
+++ b/Background.tex
@@ -44,13 +44,17 @@ see the board because it was side-on to him then he would be able to
 proceed.
 \end{comment}
 
-
+The next major enhancement of these signals came in the form of the \textbf{Semaphore} fixed signal.  Instead of having 2 positions (visible/ not visible), the boards of a semaphore signal could be moved into one of several predetermined positions. The 
+\begin{comment}
 One of the major developments in railway signalling was the introduction of
 the \textbf{Semaphore} fixed signal. These consisted of a board that could be
 moved into several preset positions. Typically these would have  3 different visible
 ``aspects'' which they could be set to: One aspect to indicate the driver can
 proceed, another that indicates the driver can proceed with caution and
 finally an aspect which indicates that the driver should stop. 
+\end{comment}
+
+
 
 Around about the same time as the introduction of the semaphore signal, the system
 for controlling the signals went under drastic change. The Policemen were
